infrastructure/portfolio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      automountServiceAccountToken: false
      containers:
        - image: ghcr.io/yyewolf/portfolio:main@sha256:5d82fa6572af0324169ef700c72949e3d6c2d488ef38ca613e43fb5ae29d3181
          imagePullPolicy: IfNotPresent
          name: portfolio
          resources:
            requests:
              cpu: 0m
              memory: 0Mi
            limits:
              cpu: 200m
              memory: 200Mi
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
