infrastructure/portfolio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: portfolio
